<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Symmetry</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_color_picker">ColorPickerActivity</string>
    <string name="color_picker_title">Set color</string>
    <string name="circleTag">C</string>
    <string name="lineTag">L</string>
    <string name="crookedLineTag">CL</string>
    <string name="polygonTag">P</string>
    <string name="rectangleTag">R</string>
    <string name="schemaTag">Sc</string>
    <string name="squareTag">S</string>
    <string name="triangleTag">T</string>
    <string name="user_createdTag">Y</string>
    <string name="dialog_settings_title">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="stroke">Stroke</string>
    <string name="fill">Fill</string>
    <string name="dialog_new_draw_title">Select Canvas Size</string>
    <string name="widthEditText_newDrawDialog">Width:</string>
    <string name="heightEditText_newDrawDialog">Height:</string>
    <string name="title_activity_dash_board">Symmetry</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="about">Symmetry is a Layer-based application that provides
    the creation of many different kinds of shapes, that you can either change parameters or delete,
    depending on your preference! Shapes that are supported are denoted as: \n
        S : Square\n
        R : Rectangle\n
        C : Circle\n
        L : Line\n
        CL : Crooked Line\n
        P : Polygon\n
        T : Triangle\n
        Y : Your shape</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_HTML">
<![CDATA[
<html>
 <head>Welcome to Symmetry!</head>
 <body style="text-align:justify;color:gray;background-color:black;">
 <br><br>
  Symmetry is a Layer-based application that provides
    the creation of many different kinds of shapes, that you can either change parameters or delete,
    depending on your preference! Shapes that are supported are denoted as:<br><br>
        S : Square<br>
        R : Rectangle<br>
        C : Circle<br>
        L : Line<br>
        CL : Crooked Line<br>
        P : Polygon<br>
        T : Triangle<br>
        Y : Your shape<br><br>
        Enjoy!
 </body>
</html>
]]>
</string>
    <string name="titleAbout">Welcome to Symmetry!</string>
    <string name="content1About">Symmetry is a Layer-based application that provides
    the creation of many different kinds of shapes, that you can either change parameters or delete,
    depending on your preference! Shapes that are supported are denoted as:</string>
    <string name="content2About">
        S  : Square\n
        R : Rectangle\n
        C : Circle\n
        L : Line\n
        CL : Crooked Line\n
        P : Polygon\n
        T : Triangle\n
        Y : Your shape</string>
    <string name="content3About">Enjoy!</string>
    <string name="string_currColor_contentDescription">current color</string>
    <string name="string_move_contentDescription">move layout</string>
    <string name="string_yourGiven_contentDescription">your given schema</string>
    <string name="string_crookedLine_contentDescription">Crooked Line</string>
    <string name="string_line_contentDescription">line</string>
    <string name="string_polygon_contentDescription">polygon</string>
    <string name="string_rectangle_contentDescription">rectangle</string>
    <string name="string_square_contentDescription">square</string>
    <string name="string_triangle_contentDescription">triangle</string>
    <string name="string_background_contentDescription">background color</string>
    <string name="string_new_contentDescription">new draw</string>
    <string name="string_settings_contentDescription">editing</string>
    <string name="string_delete_contentDescription">delete</string>
    <string name="string_moveLeft_contentDescription">move left</string>
    <string name="string_moveRight_contentDescription">move right</string>
    <string name="hideButton_contentDescription">hide/unhide button</string>
</resources>
